--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "dependencies": {}
     "scripts": {
   "build": "npm run build"
+
+        "engines": {
+  "node": ">=16.0.0 <17.0.0"
+}
+
         
 
 }
