--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,8 +37,19 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-  
-          
+
+  test:
+    name: test
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: RobertDonnan
+      - name: Deploy 
+        run: echo deploying
+           
 
   # Deployment job
   deploy:
