--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -43,12 +43,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ github.TOKEN }}
-          approvers: trstring.RobertDonnan
-      - name: Deploy 
-        run: echo deploying
+     - name: Manual Workflow Approval
+  # You may pin to the exact commit or the version.
+  # uses: trstringer/manual-approval@a824dad59ac64ac825ab8725599e483e24aa2815
+       uses: trstringer/manual-approval@v1.9.0
+       with:
+    # Required approvers
+        approvers: robertdonnan
+  
            
 
   # Deployment job
