--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -50,6 +50,9 @@ jobs:
        with:
     # Required approvers
         approvers: robertdonnan
+        secret: ${{ github.TOKEN }}
+        name: Deploy to production
+        run: echo deploying
   
            
 
