--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -49,7 +49,7 @@ jobs:
        uses: trstringer/manual-approval@v1.9.0
        with:
     # Required approvers
-        approvers: rd4921
+        approvers: RobertDonnan, rd4921
         secret: ${{ github.TOKEN }}
     
            
