--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -50,7 +50,7 @@ jobs:
        with:
     # Required approvers
         approvers: RobertDonnan, rd4921
-        secret: ${{ github.TOKEN }}
+        secret: ${{ GITHUB_TOKEN }}
     
            
 
