--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -50,7 +50,7 @@ jobs:
        with:
     # Required approvers
         approvers: RobertDonnan, rd4921
-        secret: ${{ secrets.GITHUB_TOKEN }}
+        secret: ${{ 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 }}
     
           
   # Deployment job
